<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:id="@+id/Monday_CheckBox"
        android:text="@string/mon"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="12sp"
        android:id="@+id/Tuesday_CheckBox"
        android:text="@string/tue"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="12sp"
        android:id="@+id/Wed_CheckBox"
        android:text="@string/wed"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="12sp"
        android:id="@+id/Thur_CheckBox"
        android:text="@string/thu"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="12sp"
            android:id="@+id/Fri_CheckBox"
            android:text="@string/fri"/>

</LinearLayout>
