<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="45dp"
    android:padding="10dp"
    tools:context="com.example.fangyuanzheng.schoolday.NoteDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:isScrollContainer="true"
        android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/Note_SharedImage"
            android:src="@drawable/web_hi_res_512"
            android:scaleType="centerCrop"
            android:transitionName="@string/SharedTransition"
            />
            <EditText
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:id="@+id/Note_SharedTitle"
                android:inputType="text"
            android:textIsSelectable="true"
            android:textSize="24dp"
                android:transitionName="@string/SharedTransition2"
            android:text="@string/SharedTitile"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">
            <TextView
                android:transitionName="@string/SharedTransition1"
                android:layout_gravity="bottom|end"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:text="@string/SharedDate"
                android:id="@+id/Note_SharedDate"
                android:textIsSelectable="true"
                android:textSize="16sp"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:id="@+id/Note_ContentImage"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:gravity="top|fill_horizontal"
            android:textSize="14sp"
            android:id="@+id/Note_SharedIntroduction"
            android:transitionName="@string/SharedIntroduction"/>

    </LinearLayout>
    </ScrollView>

</FrameLayout>
