<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bag_snap"

    tools:context="com.example.fangyuanzheng.schoolday.AddClassFrgament">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/web_hi_res_512" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Course"
        android:textSize="18sp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="230dp"
        />
    <EditText
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="35dp"
        android:id="@+id/Course_EditText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartTime"
        android:textSize="18sp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="275dp"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="255dp"
        android:layout_marginLeft="60dp"
        android:textSize="10sp"
        android:hint="@string/TimeRequiredInput"
        android:focusable="false"
        android:textColorHint="@color/textcolor2"
        android:ems="10"
        android:inputType="time"
        android:id="@+id/StartTime_EditText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EndTime"
        android:textSize="18sp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="315dp"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="295dp"
        android:layout_marginLeft="60dp"
        android:focusable="false"
        android:hint="@string/TimeRequiredInput"
        android:textColorHint="@color/textcolor2"
        android:textSize="10sp"
        android:ems="10"
        android:inputType="time"
        android:id="@+id/EndTime_EditText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ClassLocation"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="355dp"
        />

    <EditText
        android:id="@+id/classLocation_EditText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="340dp"
        android:ems="10"
        android:inputType="text"
        android:gravity="center"
        android:textColorHint="@color/textcolor2"
        android:textSize="15sp" />

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="380dp"
    android:layout_marginBottom="70dp"
    android:gravity="center_horizontal"
    android:padding="16dp">
    <include
        layout="@layout/radiogroup_pickweekday"></include>

</LinearLayout>
<android.support.design.widget.CoordinatorLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|bottom"
    android:layout_marginBottom="60dp">
    <Button
        android:id="@+id/SubmitButton"
        style="@style/RemoteButtonImproved"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/com_facebook_button_login_silver_background"
        android:text="@string/ButtonSubmit" />
</android.support.design.widget.CoordinatorLayout>

</FrameLayout>
